# SecureProgrammingCW_v1

./: .gitignore  README.md  vault-backup-2026-02-19-20-34-11.json
backend/: README.md
backend/api/: .env.example  README.md  SECURITY_TEST_MATRIX.md  alembic.ini  pyproject.toml
backend/api/alembic/: env.py
backend/api/alembic/versions/: 20260211_0001_initial_schema.py
backend/api/app/: audit.py  backup.py  config.py  crypto.py  db.py  errors.py  main.py  middleware.py  models.py  schemas.py  security.py  sessions.py  utils.py
backend/api/app/routes/: audit.py  backup.py  csrf_probe.py  entries.py  health.py  settings.py  vault.py
backend/api/scripts/: run_audit.sh  run_bandit.sh  run_tests.sh
backend/api/tests/: test_audit.py  test_csrf.py  test_entries_crud.py  test_health.py  test_import_fuzz.py  test_settings.py  test_tamper_detect.py  test_vault_lifecycle.py
frontend/: index.html  package-lock.json  package.json
frontend/src/app/: App.tsx  AppShell.tsx  AuthGate.tsx
frontend/src/components/: ClipboardManager.tsx  ConfirmDeleteModal.tsx  GeneratorModal.tsx  PasswordField.tsx  StatusBadge.tsx  ToastStack.tsx
frontend/src/features/audit/: AuditPage.tsx
frontend/src/features/auth/: AuthCardLayout.tsx  SetupPage.tsx  UnlockPage.tsx
frontend/src/features/entries/: DashboardPage.tsx  (+4 more)
frontend/src/hooks/: useIdleLock.ts
frontend/src/services/: apiClient.ts  apiVaultService.ts  clipboardService.ts  mockVaultService.ts
frontend/src/store/: uiStore.ts  vaultStore.ts
frontend/src/styles/: index.css
frontend/src/types/: models.ts  schemas.ts
(+2 files in other folders)
